preventing input fields zoom on ios devices

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600;800;900&display=swap");
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -9,7 +11,8 @@
   padding: 0;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   position: relative;
   width: 100vw;
@@ -20,20 +23,34 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-img, picture, video, canvas, svg {
+img,
+picture,
+video,
+canvas,
+svg {
   display: block;
   max-width: 100%;
 }
 
-input, button, textarea, select {
+input,
+button,
+textarea,
+select {
   font: inherit;
 }
 
-p, h1, h2, h3, h4, h5, h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   overflow-wrap: break-word;
 }
 
-ol, ul {
+ol,
+ul {
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -53,6 +70,10 @@ button:hover {
   width: 100%;
   max-width: 500px;
   margin: 0 auto;
+}
+
+input {
+  font-size: 16px !important;
 }
 
 .back-button {
